--- a/index.html
+++ b/index.html
@@ -26,25 +26,25 @@
       </p>
     </section>
     <div class="cards container">
-      <div class="card">
+      <div class="card supervisor">
         <h3 class="card-title">Supervisor</h3>
         <p class="card-text">Monitors activity to identify project roadblocks</p>
         <img src="./images/icon-supervisor.svg" alt="magnifying glass pic">
       </div>
 
-      <div class="card">
+      <div class="card team">
         <h3 class="card-title">Team Builder</h3>
         <p class="card-text">Scans our talent network to create the optimal team for your project</p>
         <img src="./images/icon-team-builder.svg" alt="picture of a small house">
       </div>
 
-      <div class="card">
+      <div class="card karma">
         <h3 class="card-title">Karma</h3>
         <p class="card-text">Regularly evaluates our talent to ensure quality</p>
         <img src="./images/icon-karma.svg" alt="picture of a light bulb">
       </div>
 
-      <div class="card">
+      <div class="card calculator">
         <h3 class="card-title">Calculator</h3>
         <p class="card-text">Uses data from past projects to provide better delivery estimates</p>
         <img src="./images/icon-calculator.svg" alt="picture of a computer screen">
