--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="#">Charles Loehle</a>.
     </p>
   </footer>
 </body>
